# alphazero-rig

./: .gitignore  README.md  pyproject.toml
alphazero/: plot.py  replay.py  train.py
alphazero/eval/: arena.py  calibrate.py  inspect.py  openings.py  plot_metrics.py  replay.py
alphazero/games/: connect4.py
alphazero/mcts/: puct.py  pure_mcts.py
alphazero/nets/: pvnet.py
alphazero/training/: loop.py  replay_buffer.py  self_play.py  trainer.py
src/alphazero/agents/: base.py  random_agent.py
src/alphazero/games/: base.py
tests/: test_arena.py  test_calibrate.py  test_connect4.py  test_inspect.py  test_openings.py  test_plot_metrics.py  test_puct.py  test_pure_mcts.py  test_pvnet.py  test_replay.py  test_replay_buffer.py  test_self_play.py  test_self_play_data.py  test_train_loop.py  test_trainer.py
